deploy/k8s/base/ingress-apex.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibevoice-apex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: vibevoice.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vibevoice
                port:
                  name: http
  tls:
    - hosts:
        - vibevoice.lol
      secretName: vibevoice-apex-tls
