deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibevoice
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vibevoice.lol
        - www.vibevoice.lol
      secretName: vibevoice-tls
  rules:
    - host: vibevoice.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vibevoice
                port:
                  name: http
    - host: www.vibevoice.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vibevoice
                port:
                  name: http
